--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Document</title>
+    <p>New Pharagraph</p>
 </head>
 <body>
-    <h1>About Page</h1>
-    <p>New P tag</p>
+    
 </body>
 </html>
