--- a/user.html
+++ b/user.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>About Page</h1>
-    <p>New P tag</p>
-    <p>New P2 tag</p>
+    
 </body>
 </html>
